fixing some bugs

--- a/lib/src/main/res/layout/expandable_layout.xml
+++ b/lib/src/main/res/layout/expandable_layout.xml
@@ -14,7 +14,7 @@
             android:gravity="center"/>
 
     <androidx.appcompat.widget.Toolbar
-            android:id="@+id/expand_toolbar"
+            android:id="@+id/com_roacult_expandabletoolbar"
             android:background="?attr/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="56dp"/>
